MergedAndFixedXML